Fix Bug 311534 - "Serverside subscription" dialog is always opened in

the background

FIXED-IN: 4.10
BUG: 311534