kmmainwidget.cpp
@@ -4793,7 +4793,7 @@ void KMMainWidget::slotServerSideSubscription()
             delete iface;
             return;
         }
-        const QDBusReply<int> reply = iface->call( QLatin1String( "configureSubscription" ) );
+        const QDBusReply<int> reply = iface->call( QLatin1String( "configureSubscription" ), (qlonglong)winId() );
         if ( !reply.isValid() ) {
             delete iface;
             return;
