resources/imap/imapresource.h
@@ -61,7 +61,7 @@ public Q_SLOTS:
   Q_SCRIPTABLE void requestManualExpunge( qint64 collectionId );
   Q_SCRIPTABLE void setFastSyncEnabled( bool fastSync );
   Q_SCRIPTABLE bool isFastSyncEnabled() const;
-  Q_SCRIPTABLE int configureSubscription();
+  Q_SCRIPTABLE int configureSubscription( qlonglong windowId = 0 );
 
   // pseudo-virtual called by ResourceBase
   QString dumpResourceToString() const;
